--- a/Project-Prep/Base.lproj/Main.storyboard
+++ b/Project-Prep/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cl0-wQ-Ltj">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,138 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project_Prep" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EvR-Ta-Olg">
+                                <rect key="frame" x="100" y="123" width="215" height="29"/>
+                                <segments>
+                                    <segment title="Table View"/>
+                                    <segment title="Collection View"/>
+                                </segments>
+                            </segmentedControl>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gOg-hd-58j">
+                                <rect key="frame" x="0.0" y="159" width="414" height="703"/>
+                                <connections>
+                                    <segue destination="kwj-bO-8cR" kind="embed" id="ZFR-JX-vFz"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HyX-Ty-tXl">
+                                <rect key="frame" x="0.0" y="159" width="414" height="703"/>
+                                <connections>
+                                    <segue destination="lCi-vd-rgC" kind="embed" id="d0l-XA-42i"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="EvR-Ta-Olg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="4KL-OQ-SIa"/>
+                            <constraint firstItem="gOg-hd-58j" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6Wo-mS-eMn"/>
+                            <constraint firstItem="gOg-hd-58j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Fga-zM-1hl"/>
+                            <constraint firstItem="EvR-Ta-Olg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="L0a-be-0OB"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T9i-mX-oNa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gOg-hd-58j" secondAttribute="trailing" id="UIQ-su-KOC"/>
+                            <constraint firstItem="gOg-hd-58j" firstAttribute="top" secondItem="EvR-Ta-Olg" secondAttribute="bottom" constant="8" id="gZQ-JM-ScL"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="top" secondItem="EvR-Ta-Olg" secondAttribute="bottom" constant="8" id="iwF-FN-rAo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EvR-Ta-Olg" secondAttribute="trailing" constant="99" id="kCS-Pm-Yj4"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nSD-3s-uOV"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sJy-UL-EWs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="DK7-lJ-5am"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="986.95652173913049" y="742.63392857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BD5-h3-q4M">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Cl0-wQ-Ltj" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KIT-Y2-asz">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="olq-tr-5il"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JTx-Wj-6gn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="742.63392857142856"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="odD-Q0-TkA">
+            <objects>
+                <viewController id="kwj-bO-8cR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cuP-dO-z02">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Aw0-bB-hIQ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Aw0-bB-hIQ" firstAttribute="leading" secondItem="cuP-dO-z02" secondAttribute="leading" id="6GF-zH-WqG"/>
+                            <constraint firstItem="Aw0-bB-hIQ" firstAttribute="top" secondItem="cuP-dO-z02" secondAttribute="top" id="BoD-c9-SQN"/>
+                            <constraint firstAttribute="trailing" secondItem="Aw0-bB-hIQ" secondAttribute="trailing" id="EkR-U6-oUp"/>
+                            <constraint firstAttribute="bottom" secondItem="Aw0-bB-hIQ" secondAttribute="bottom" id="Hqh-Ba-s2M"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="foD-UY-eLF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1931.8840579710147" y="505.91517857142856"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="k1k-d9-cQ8">
+            <objects>
+                <viewController id="lCi-vd-rgC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rsX-zJ-CJ2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y7r-ea-d2s">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7RU-MQ-x6j">
+                                    <size key="itemSize" width="150" height="148"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6TF-jd-7Zo">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="148"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="148"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="y7r-ea-d2s" firstAttribute="top" secondItem="rsX-zJ-CJ2" secondAttribute="top" id="P14-YH-TS6"/>
+                            <constraint firstAttribute="trailing" secondItem="y7r-ea-d2s" secondAttribute="trailing" id="RGH-Zn-51n"/>
+                            <constraint firstAttribute="bottom" secondItem="y7r-ea-d2s" secondAttribute="bottom" id="VYl-sh-zRJ"/>
+                            <constraint firstItem="y7r-ea-d2s" firstAttribute="leading" secondItem="rsX-zJ-CJ2" secondAttribute="leading" id="YfX-cs-yXb"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TB9-rp-uPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1931.8840579710147" y="1094.53125"/>
         </scene>
     </scenes>
 </document>
