--- a/Project-Prep/Base.lproj/Main.storyboard
+++ b/Project-Prep/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cl0-wQ-Ltj">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,52 +13,58 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project_Prep" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Project_Prep" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EvR-Ta-Olg">
-                                <rect key="frame" x="100" y="123" width="215" height="29"/>
+                                <rect key="frame" x="79" y="80" width="217" height="29"/>
                                 <segments>
                                     <segment title="Table View"/>
                                     <segment title="Collection View"/>
                                 </segments>
-                            </segmentedControl>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gOg-hd-58j">
-                                <rect key="frame" x="0.0" y="159" width="414" height="703"/>
                                 <connections>
-                                    <segue destination="kwj-bO-8cR" kind="embed" id="ZFR-JX-vFz"/>
+                                    <action selector="switchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="Gog-qf-C9g"/>
+                                </connections>
+                            </segmentedControl>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gOg-hd-58j" userLabel="Container View 1">
+                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <connections>
+                                    <segue destination="kwj-bO-8cR" kind="embed" identifier="seguetoTableView" id="ZFR-JX-vFz"/>
                                 </connections>
                             </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HyX-Ty-tXl">
-                                <rect key="frame" x="0.0" y="159" width="414" height="703"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HyX-Ty-tXl" userLabel="Container View 2">
+                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
                                 <connections>
-                                    <segue destination="lCi-vd-rgC" kind="embed" id="d0l-XA-42i"/>
+                                    <segue destination="lCi-vd-rgC" kind="embed" identifier="seguetoCollectionView" id="d0l-XA-42i"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="EvR-Ta-Olg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="4KL-OQ-SIa"/>
-                            <constraint firstItem="gOg-hd-58j" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6Wo-mS-eMn"/>
-                            <constraint firstItem="gOg-hd-58j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Fga-zM-1hl"/>
-                            <constraint firstItem="EvR-Ta-Olg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="L0a-be-0OB"/>
-                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T9i-mX-oNa"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gOg-hd-58j" secondAttribute="trailing" id="UIQ-su-KOC"/>
-                            <constraint firstItem="gOg-hd-58j" firstAttribute="top" secondItem="EvR-Ta-Olg" secondAttribute="bottom" constant="8" id="gZQ-JM-ScL"/>
-                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="top" secondItem="EvR-Ta-Olg" secondAttribute="bottom" constant="8" id="iwF-FN-rAo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EvR-Ta-Olg" secondAttribute="trailing" constant="99" id="kCS-Pm-Yj4"/>
-                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nSD-3s-uOV"/>
-                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sJy-UL-EWs"/>
+                            <constraint firstItem="EvR-Ta-Olg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="6Uk-w8-SnR"/>
+                            <constraint firstItem="EvR-Ta-Olg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dlz-PF-xLu"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WqH-7V-Kqe"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XZK-55-d63"/>
+                            <constraint firstItem="gOg-hd-58j" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bVc-om-Prj"/>
+                            <constraint firstItem="gOg-hd-58j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eN8-aH-tIW"/>
+                            <constraint firstItem="HyX-Ty-tXl" firstAttribute="top" secondItem="EvR-Ta-Olg" secondAttribute="bottom" constant="16" id="pFN-eE-fVc"/>
+                            <constraint firstAttribute="bottom" secondItem="HyX-Ty-tXl" secondAttribute="bottom" id="vBp-gZ-EIU"/>
+                            <constraint firstItem="gOg-hd-58j" firstAttribute="top" secondItem="EvR-Ta-Olg" secondAttribute="bottom" constant="16" id="vid-mb-qTG"/>
+                            <constraint firstAttribute="bottom" secondItem="gOg-hd-58j" secondAttribute="bottom" id="wiU-Sa-Vcw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="DK7-lJ-5am"/>
+                    <connections>
+                        <outlet property="firstView" destination="gOg-hd-58j" id="zt3-Qw-rID"/>
+                        <outlet property="secondView" destination="HyX-Ty-tXl" id="kzP-eD-Akc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="986.95652173913049" y="742.63392857142856"/>
+            <point key="canvasLocation" x="986.39999999999998" y="742.5787106446777"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BD5-h3-q4M">
@@ -66,7 +72,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Cl0-wQ-Ltj" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KIT-Y2-asz">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -81,14 +87,18 @@
         <!--View Controller-->
         <scene sceneID="odD-Q0-TkA">
             <objects>
-                <viewController id="kwj-bO-8cR" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TableView" id="kwj-bO-8cR" customClass="ViewController" customModule="Project_Prep" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cuP-dO-z02">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="543"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Aw0-bB-hIQ">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="543"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="kwj-bO-8cR" id="G2o-zI-M2d"/>
+                                    <outlet property="delegate" destination="kwj-bO-8cR" id="Lj1-aY-IbB"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -98,7 +108,12 @@
                             <constraint firstAttribute="trailing" secondItem="Aw0-bB-hIQ" secondAttribute="trailing" id="EkR-U6-oUp"/>
                             <constraint firstAttribute="bottom" secondItem="Aw0-bB-hIQ" secondAttribute="bottom" id="Hqh-Ba-s2M"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="cVT-Ze-bk5"/>
                     </view>
+                    <connections>
+                        <outlet property="TableView" destination="Aw0-bB-hIQ" id="aAF-KR-ORl"/>
+                        <outlet property="tableView" destination="Aw0-bB-hIQ" id="SlF-Gy-mKh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="foD-UY-eLF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -107,13 +122,13 @@
         <!--View Controller-->
         <scene sceneID="k1k-d9-cQ8">
             <objects>
-                <viewController id="lCi-vd-rgC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CollectionView" id="lCi-vd-rgC" customClass="ViewController" customModule="Project_Prep" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rsX-zJ-CJ2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="543"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y7r-ea-d2s">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="703"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="543"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7RU-MQ-x6j">
                                     <size key="itemSize" width="150" height="148"/>
@@ -131,6 +146,10 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="lCi-vd-rgC" id="rjg-ru-gRL"/>
+                                    <outlet property="delegate" destination="lCi-vd-rgC" id="oSV-5P-Qtl"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -140,7 +159,12 @@
                             <constraint firstAttribute="bottom" secondItem="y7r-ea-d2s" secondAttribute="bottom" id="VYl-sh-zRJ"/>
                             <constraint firstItem="y7r-ea-d2s" firstAttribute="leading" secondItem="rsX-zJ-CJ2" secondAttribute="leading" id="YfX-cs-yXb"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="tey-pi-uVy"/>
                     </view>
+                    <connections>
+                        <outlet property="CollectionView" destination="y7r-ea-d2s" id="OE6-Io-1Kh"/>
+                        <outlet property="collectionViewOne" destination="y7r-ea-d2s" id="rfg-Ct-YJb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TB9-rp-uPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
