--- a/Project-Prep/Base.lproj/Main.storyboard
+++ b/Project-Prep/Base.lproj/Main.storyboard
@@ -19,9 +19,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EvR-Ta-Olg">
-                                <rect key="frame" x="107" y="80" width="161" height="29"/>
+                                <rect key="frame" x="79" y="80" width="217" height="29"/>
                                 <segments>
-                                    <segment title="Table View"/>
+                                    <segment title="Collection View"/>
                                     <segment title="Table View"/>
                                 </segments>
                                 <connections>
